vulkan setup halfway

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -54,4 +54,5 @@ target_link_libraries( # Specifies the target library.
                        # included in the NDK.
         android
         native_app_glue
+        vulkan
         ${log-lib} )
