--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -36,7 +36,9 @@ add_library(engine STATIC
         engine/private/engine_helper.cpp
         engine/private/engine_shader_helper.cpp
         engine/private/engine_debug_output.cpp
-        engine/private/engine_buffer_helper.cpp)
+        engine/private/engine_buffer_helper.cpp
+        engine/private/engine_physics.cpp
+        engine/private/engine_image.cpp)
 
 target_include_directories(engine PRIVATE
         engine/public)
