--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -38,7 +38,8 @@ add_library(engine STATIC
         engine/private/engine_debug_output.cpp
         engine/private/engine_buffer_helper.cpp
         engine/private/engine_physics.cpp
-        engine/private/engine_image.cpp)
+        engine/private/engine_image.cpp
+        engine/private/engine_geometry.cpp)
 
 target_include_directories(engine PRIVATE
         engine/public)
