--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,9 @@ android {
                 cppFlags ""
             }
         }
+        ndk {
+            abiFilter "arm64-v8a"
+        }
     }
     buildTypes {
         release {
