--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -52,7 +52,12 @@ set(CGAL_SOURCE_DIR C:/Users/andys/Documents/repos/cgal)
 set(CGAL_BUILD_DIR C:/Users/andys/Documents/repos/cgal_android)
 add_subdirectory(${CGAL_SOURCE_DIR} ${CGAL_BUILD_DIR})
 
-target_include_directories(engine PRIVATE ${CGAL_BUILD_DIR}/include)
+add_library(mdlcg STATIC
+        mdlcg/private/mdlcg.cpp)
+target_include_directories(mdlcg PRIVATE mdlcg/public)
+target_include_directories(mdlcg PRIVATE ${CGAL_INCLUDE_DIRS})
+target_include_directories(mdlcg PRIVATE C:/Users/andys/Documents/repos/boost_1.69.0_prebuilt_ndk_19/include)
+set_target_properties(mdlcg PROPERTIES COMPILE_FLAGS "-w")
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
@@ -79,5 +84,8 @@ target_link_libraries( # Specifies the target library.
         android
         vulkan
         CGAL
+        CGAL_Core
+        CGAL_ImageIO
         engine
+        mdlcg
         ${log-lib} )
